// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Variable Free Layout Enable Global Scope > test get Covers 1`] = `
Map {
  "start_0" => [
    "base_1",
    "base_2",
    "end_0",
    "loop_1",
    "base_3",
    "base_in_loop_1",
    "base_in_loop_2",
    "base_in_loop_3",
  ],
  "end_0" => [],
  "base_1" => [
    "base_2",
    "end_0",
    "loop_1",
    "base_3",
    "base_in_loop_1",
    "base_in_loop_2",
    "base_in_loop_3",
  ],
  "base_2" => [
    "end_0",
  ],
  "loop_1" => [
    "base_3",
    "end_0",
  ],
  "base_in_loop_1" => [
    "base_in_loop_3",
  ],
  "base_in_loop_2" => [
    "base_in_loop_3",
  ],
  "base_in_loop_3" => [],
  "base_3" => [
    "end_0",
  ],
}
`;

exports[`Variable Free Layout Enable Global Scope > test get Covers After Init Private 1`] = `
Map {
  "start_0" => [
    "base_1",
    "base_1_private",
    "base_2",
    "base_2_private",
    "end_0",
    "end_0_private",
    "loop_1",
    "loop_1_private",
    "base_3",
    "base_3_private",
    "base_in_loop_1",
    "base_in_loop_1_private",
    "base_in_loop_2",
    "base_in_loop_2_private",
    "base_in_loop_3",
    "base_in_loop_3_private",
  ],
  "end_0" => [],
  "base_1" => [
    "base_2",
    "base_2_private",
    "end_0",
    "end_0_private",
    "loop_1",
    "loop_1_private",
    "base_3",
    "base_3_private",
    "base_in_loop_1",
    "base_in_loop_1_private",
    "base_in_loop_2",
    "base_in_loop_2_private",
    "base_in_loop_3",
    "base_in_loop_3_private",
  ],
  "base_2" => [
    "end_0",
    "end_0_private",
  ],
  "loop_1" => [
    "base_3",
    "base_3_private",
    "end_0",
    "end_0_private",
  ],
  "base_in_loop_1" => [
    "base_in_loop_3",
    "base_in_loop_3_private",
  ],
  "base_in_loop_2" => [
    "base_in_loop_3",
    "base_in_loop_3_private",
  ],
  "base_in_loop_3" => [],
  "base_3" => [
    "end_0",
    "end_0_private",
  ],
}
`;

exports[`Variable Free Layout Enable Global Scope > test get Deps 1`] = `
Map {
  "start_0" => [
    "GlobalScope",
  ],
  "end_0" => [
    "GlobalScope",
    "start_0",
    "loop_1",
    "base_1",
    "base_3",
    "base_2",
  ],
  "base_1" => [
    "GlobalScope",
    "start_0",
  ],
  "base_2" => [
    "GlobalScope",
    "start_0",
    "base_1",
  ],
  "loop_1" => [
    "GlobalScope",
    "start_0",
    "base_1",
  ],
  "base_in_loop_1" => [
    "GlobalScope",
    "start_0",
    "base_1",
  ],
  "base_in_loop_2" => [
    "GlobalScope",
    "start_0",
    "base_1",
  ],
  "base_in_loop_3" => [
    "GlobalScope",
    "start_0",
    "base_1",
    "base_in_loop_2",
    "base_in_loop_1",
  ],
  "base_3" => [
    "GlobalScope",
    "start_0",
    "base_1",
    "loop_1",
  ],
}
`;

exports[`Variable Free Layout Enable Global Scope > test get Deps After Init Private 1`] = `
Map {
  "start_0" => [
    "GlobalScope",
    "start_0_private",
  ],
  "end_0" => [
    "GlobalScope",
    "start_0",
    "loop_1",
    "base_1",
    "base_3",
    "base_2",
    "end_0_private",
  ],
  "base_1" => [
    "GlobalScope",
    "start_0",
    "base_1_private",
  ],
  "base_2" => [
    "GlobalScope",
    "start_0",
    "base_1",
    "base_2_private",
  ],
  "loop_1" => [
    "GlobalScope",
    "start_0",
    "base_1",
    "loop_1_private",
  ],
  "base_in_loop_1" => [
    "GlobalScope",
    "start_0",
    "base_1",
    "loop_1_private",
    "base_in_loop_1_private",
  ],
  "base_in_loop_2" => [
    "GlobalScope",
    "start_0",
    "base_1",
    "loop_1_private",
    "base_in_loop_2_private",
  ],
  "base_in_loop_3" => [
    "GlobalScope",
    "start_0",
    "base_1",
    "loop_1_private",
    "base_in_loop_2",
    "base_in_loop_1",
    "base_in_loop_3_private",
  ],
  "base_3" => [
    "GlobalScope",
    "start_0",
    "base_1",
    "loop_1",
    "base_3_private",
  ],
}
`;

exports[`Variable Free Layout Enable Global Scope > test get private scope Covers 1`] = `
Map {
  "start_0_private" => [
    "start_0",
  ],
  "end_0_private" => [
    "end_0",
  ],
  "base_1_private" => [
    "base_1",
  ],
  "base_2_private" => [
    "base_2",
  ],
  "loop_1_private" => [
    "base_in_loop_1",
    "base_in_loop_1_private",
    "base_in_loop_2",
    "base_in_loop_2_private",
    "base_in_loop_3",
    "base_in_loop_3_private",
    "loop_1",
  ],
  "base_in_loop_1_private" => [
    "base_in_loop_1",
  ],
  "base_in_loop_2_private" => [
    "base_in_loop_2",
  ],
  "base_in_loop_3_private" => [
    "base_in_loop_3",
  ],
  "base_3_private" => [
    "base_3",
  ],
}
`;

exports[`Variable Free Layout Enable Global Scope > test get private scope Deps 1`] = `
Map {
  "start_0_private" => [
    "GlobalScope",
  ],
  "end_0_private" => [
    "GlobalScope",
    "start_0",
    "loop_1",
    "base_1",
    "base_3",
    "base_2",
  ],
  "base_1_private" => [
    "GlobalScope",
    "start_0",
  ],
  "base_2_private" => [
    "GlobalScope",
    "start_0",
    "base_1",
  ],
  "loop_1_private" => [
    "GlobalScope",
    "start_0",
    "base_1",
  ],
  "base_in_loop_1_private" => [
    "GlobalScope",
    "start_0",
    "base_1",
    "loop_1_private",
  ],
  "base_in_loop_2_private" => [
    "GlobalScope",
    "start_0",
    "base_1",
    "loop_1_private",
  ],
  "base_in_loop_3_private" => [
    "GlobalScope",
    "start_0",
    "base_1",
    "loop_1_private",
    "base_in_loop_2",
    "base_in_loop_1",
  ],
  "base_3_private" => [
    "GlobalScope",
    "start_0",
    "base_1",
    "loop_1",
  ],
}
`;

exports[`Variable Free Layout Enable Global Scope > test sort 1`] = `
[
  Symbol(GlobalScope),
  "testScope",
  "start_0",
  "end_0",
  "base_1",
  "base_2",
  "loop_1",
  "base_in_loop_1",
  "base_in_loop_2",
  "base_in_loop_3",
  "base_3",
  "start_0_private",
  "end_0_private",
  "base_1_private",
  "base_2_private",
  "loop_1_private",
  "base_in_loop_1_private",
  "base_in_loop_2_private",
  "base_in_loop_3_private",
  "base_3_private",
]
`;
